# YTRatings

./: README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: data.json
frontend/src/components/: BarBlock.vue  ChannelItem.vue  Chart.vue  ChartOld.vue  FeedbackForm.vue  InfoBlock.vue  StatBlock.vue  StatVideoBlock.vue  VideoInfo.vue  VideoInfoOld.vue
frontend/src/components/UI/: ValueChange.vue  dataBlock.vue
yt_fetcher/: .cursorrules  Dockerfile  data.pkl  docker-compose.yml  main.ipynb  parser.ipynb  pyproject.toml  pyproject_fastapi.toml  schemas.py  ytr.nginx.conf
yt_fetcher/.cursor/rules/: my-custom-rules.mdc
yt_fetcher/app/: config.py  dao.py  dao_base.py  dao_report.py  dao_yt.py  database.py  fastapi_app.py  logger.py  main.ipynb  main.py  models.py  period.py  schemas.py  services.py  tts.py  ytapi.py
yt_fetcher/app/api/: chatgptapi.py  openaiapi.py  ytapi.py
yt_fetcher/app/api/prompts/: check_channels.txt  check_clickbait.txt
yt_fetcher/app/channel/: __init__.py  dao.py  models.py  schemas.py
yt_fetcher/app/channel/category/: dao.py  models.py  schemas.py
yt_fetcher/app/channel/video/: dao.py  models.py  schemas.py
yt_fetcher/app/dao/: base.py
yt_fetcher/app/fast_api/: main.py
yt_fetcher/app/period/: __init__.py  period.py
yt_fetcher/app/report/: __init__.py  dao.py  models.py  schemas.py  tools.py
yt_fetcher/app/video/: dao.py  models.py
yt_fetcher/sql/: analysis.sql  views.sql
