[tool.poetry]
name = "yt_fetcher"
version = "0.1.0"
description = ""
authors = ["legofrend <eremin.oleg@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.138.0"
pandas = "^2.2.2"
pydantic-settings = "^2.4.0"
python-json-logger = "^2.0.7"
sqlalchemy = "^2.0.33"
jupyter = "^1.1.1"
google-auth-oauthlib = "^1.2.1"
bs4 = "^0.0.2"
lxml = "^5.3.0"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.10.5"
openai = "^1.47.0"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.10"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
